@@ -566,6 +566,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-9723. Improve error message when hadoop archive output path already
     exists. (Jean-Baptiste Onofré and Yongjun Zhang via aajisak)
 
+    HADOOP-11713. ViewFileSystem should support snapshot methods.
+    (Rakesh R via cnauroth)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
